# s3-bagit-validator

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  batch.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: dev-build.yml  prod-promote.yml  stage-build.yml
docs/adr/: 001-lambda-scope.md
lambdas/: aip.py  cli.py  config.py  exceptions.py  validator.py
lambdas/sql/: aip_uuids_and_uris.sql  s3_inventory.sql
lambdas/utils/aws/: __init__.py  athena.py  batch.py  s3.py  s3_inventory.py
tests/: conftest.py  test_aip.py  test_athena.py  test_cli.py  test_config.py  test_lambda_handler.py  test_s3.py  test_s3_inventory.py  test_validator.py
tests/fixtures/aips/checksum-mismatch/: bag-info.txt  manifest-sha256.txt  tagmanifest-sha256.txt
tests/fixtures/aips/checksum-mismatch/data/: file1.txt
tests/fixtures/aips/missing-file-in-aip/: bag-info.txt  manifest-sha256.txt  tagmanifest-sha256.txt
tests/fixtures/aips/missing-file-in-manifest/: bag-info.txt  manifest-sha256.txt  tagmanifest-sha256.txt
tests/fixtures/aips/valid-aip/: bag-info.txt  manifest-sha256.txt  tagmanifest-sha256.txt
tests/fixtures/cli/bulk-validation/: existing_results.csv  input_with_existing_results.csv  integration_input.csv  invalid_input.csv  single_s3_uri_input.csv  single_uuid_input.csv  valid_input.csv
tests/sam/: README.md  env.json.template  template.yaml
