[project]
name = "s3-bagit-validator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "click",
    "duckdb",
    "pandas",
    "requests",
    "sentry-sdk",
]

[project.scripts]
cli = "lambdas.cli:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lambdas*"]

[dependency-groups]
dev = [
    "boto3-stubs[s3]",
    "coveralls",
    "ipython",
    "mypy",
    "pandas-stubs",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-reraise",
    "ruff",
    "types-requests",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/","output/"]

[tool.pytest.ini_options]
log_level = "INFO"
markers = [
    "unit: unit tests",
    "integration: integration tests"
]

[tool.ruff]
target-version = "py313"
exclude = ["output/"]

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    # default
    "COM812",
    "D107",
    "N812",
    "PTH",

    # project-specific
    "C90",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "EM101",
    "EM102",
    "G004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S321",
    "TRY003"
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"